$Update to all pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,14 @@ theme:
   logo: assets/ANIN_logo.png
   name: material
   features:
+    - announce.dismiss
+    - content.action.edit
+    - content.action.view
+    - content.code.annotate
+    - content.code.copy
+    # - content.code.select
+    # - content.footnote.tooltips
+    # - content.tabs.link
     - navigation.tabs.sticky 
     - navigation.tabs
     - navigation.sections
@@ -31,13 +39,11 @@ theme:
       accent: lime
 nav:
 - Home: index.md
-- Documentation:
-    - Getting Started:
+- Get Started:
       - Installation: 'Installation.md'
-      - Quick Overview: 'Overview.md'
+      - Drought Indices Tools: 'drought_indices.md'
 - Theoretical Basis: 
     - Introduction: 'theoretical_basis.md'
-    - Drought Indices: 'drought_indices.md'
 - API Reference: api_reference.md
 
 # - Tutorials:
@@ -49,6 +55,8 @@ nav:
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - admonition
@@ -60,8 +68,4 @@ markdown_extensions:
   - pymdownx.mark
   - attr_list
   - md_in_html
-  - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
-  - attr_list
-  - md_in_html
+
