--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ theme:
     - navigation.sections
     - navigation.expand
     - navigation.path
+    - navigation.footer
     - toc.integrate
     - navigation.top
     - search.suggest
@@ -41,16 +42,17 @@ nav:
 - Home: index.md
 - Get Started:
       - Installation: 'Installation.md'
-      - Drought Indices Tools: 'drought_indices.md'
-- Theoretical Basis: 
-    - Introduction: 'theoretical_basis.md'
+- Drought indices:
+      - Running the Drought Indices Tools: 'drought_indices.md'
+      - Working in Jupyter Notebooks: 'JupyterNB.md'
+- Theoretical Basis: 'theoretical_basis.md'
 - API Reference: api_reference.md
 
 # - Tutorials:
 #   - For Users:
 #     - Getting Started:
 #       - Installation: 'installation.md'
-#       - Quick Overview: 'overview.md'
+#       - Starting with Jupyter Notebooks: 'overview.md'
 
 markdown_extensions:
   - pymdownx.highlight:
@@ -68,4 +70,4 @@ markdown_extensions:
   - pymdownx.mark
   - attr_list
   - md_in_html
-
+  - tables
