--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: ANIN Handbook
 theme:
-  logo: assets/ANIN_logo.png
+  
   name: material
   features:
     - announce.dismiss
@@ -45,8 +45,9 @@ nav:
 - Drought indices:
       - Running the Drought Indices Tools: 'drought_indices.md'
       - Working in Jupyter Notebooks: 'JupyterNB.md'
-- Theoretical Basis: 'theoretical_basis.md'
-- Python codes: python_codes.md
+      - Example Results: 'examples.md'
+- Specifications: 'theoretical_basis.md'
+
 
 # - Tutorials:
 #   - For Users:
